
====================
Hammag; 15.12.2006 16:40 GMT+1
----------
[rev. 47]

<General changes>
 - minor internal changes only

[GAME]
decoder/udp_useobject.cpp : fixed again some signed to unsigned cast issue.
decoder/udp_zoning.cpp .h : added PUdpEndOfZoning class
decoder/udp_OOO.cpp : made message reception verbose

====================
Namikon; 15.12.2006 20:02 GMT+1
----------
[rev. 48]

<General changes>
 - minor internal changes only

[GAME]
Updated ISC ProtDef again. The protocol itself will be called ISCP from now on (Inter-Server-Communication-Protocol)
Updated infoserver.conf, added ISC config values

====================
Namikon; 16.12.2006 15:36 GMT+1
----------
[rev. 49]

[IMPORTANT]
From this release on, TinNS will check more and more for accountlevels.
If you want admin access, you have to edit your MySQL table. (Admin: Level 100)
Its not much yet, but the first steps have been made, and more will follow.
Next step will be the gamemaster/admin commands.

<Infoserver>
- Changed default error-return for Sql Checkaccount from -12 to -99, to create free place for further errormessages
- Added require_validation to infoserver.conf. You can enable this if you like to create accounts on your own,
  not by autoaccount.

<Gameserver>
- Removed traces of old AutoAccount creation in GameServer. AutoAcc should *only* be done by Infoserver!
- Added accountlevel check.

====================
Namikon; 17.12.2006 22:42 GMT+1
----------
[rev. 50]

IMPORTANT:
This rev keeps crashing and it also causes OutOfOrder packets, for whatever reason. we have to trace
this down first.

[GAME]
- Fixed errors from last SVN release (Caused several segmentation faults)
- Added configfile commands.conf
- Added check for required accountlevel when trying to use ingame command

[INFO]
- Fixed errors from last SVN release (Caused several segmentation faults)
- Added default values for isc stuff to configtemplate.h. I forgot to add them in the last revision